# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "ponyiser"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Wrap concurrent code in Pony reference capabilities to eliminate data races at compile time"
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/ponyiser"
keywords = ["pony", "concurrency", "data-race-freedom", "safety"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "2"
handlebars = "6"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
